--- a/importantDates.html
+++ b/importantDates.html
@@ -68,7 +68,7 @@
                         <ul class="navbar-nav ml-auto">
                             <li class="nav-item "><a class="nav-link" href="index.html">Home</a></li>
                             <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
-                            <li class="nav-item"><a class="nav-link" href="about.html">Call for Papers</a></li>
+                            <li class="nav-item"><a class="nav-link" href="callForPapers.html">Call for Papers</a></li>
                             <li class="nav-item active"><a class="nav-link" href="importantDates.html">Important Dates</a></li>
                             <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle" href="#" id="dropdown-a" data-toggle="dropdown">Committee</a>
